--- a/styles/color-collection.less
+++ b/styles/color-collection.less
@@ -1,20 +1,24 @@
 
-.color-tag, .color-stack {
+.color-stack, .color-gradient {
 	display: flex;
 	flex-direction: row;
 	border-radius: 10px;
 }
 
-.color-tag-box {
-	width: 15px;
-	height: 15px;
-	border-radius: 2px;
-	margin-right: 5px;
-}
-
 .color-stack-box {
 	flex: 1;
+	width: 20px;
 	height: 100px;
+	cursor: pointer;
+	text-align: center;
+    transition: flex 0.3s ease;
+	pointer-events: "auto";
+	border: none;
+	padding: 0;
+}
+
+.color-stack-box:hover {
+	flex: 50px;
 }
 
 .color-stack-box:first-child {
@@ -24,9 +28,47 @@
 .color-stack-box:last-child {
 	border-radius: 0px 10px 10px 0px;
 }
+.color-stack-box:only-child {
+	border-radius: 10px 10px 10px 10px;
+}
+
+.color-stack-content {
+	display: flex;
+	justify-content: center;
+	pointer-events: none;
+	align-items: center;
+	height: 100%;
+	transition: opacity 0.3s ease;
+}
+
+.color-stack-box .color-stack-content {
+	opacity: 0;
+}
+
+.color-stack-box:hover .color-stack-content {
+	opacity: 1;
+}
 
 .color-text-center {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.color-layer {
+	position: relative
+}
+
+.color-gradient {
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100px;
+	pointer-events: none;
+	transition: opacity 0.3s ease;
+}
+
+.color-gradient:hover {
+	background: red;
+	opacity: 0;
 }
